<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能巡检</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登陆</string>
    <string name="xjupload_title">拍照上传</string>
    <string name="xjupload_normal_button_text">正常</string>
    <string name="xjupload_urgency_button_text">紧急</string>
    <string name="xjupload_very_urgency_button_text">非常紧急</string>
    <string name="xjupload_upload_btn">上传</string>
    <string name="xjupload_photo_text_hint">请点击拍照按钮</string>
    <string name="xjupload_wzsm_text_hint">文字说明</string>
    <string name="xjhistory_title">巡检历史</string>
</resources>
