<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#DDDDDD" >
    <LinearLayout
        android:orientation="vertical" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100.0dp"
        android:layout_marginLeft="10.0dp"
        android:layout_marginRight="10.0dp"
        android:background="@drawable/content_frame">
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_height="40.0dp"
            android:layout_width="fill_parent"
            android:gravity="center_vertical">
            <TextView 
                android:textSize="@dimen/normal_text_size"
                android:layout_width="100.0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:paddingLeft="8.0dp"
                android:text="@string/username"/>
            <EditText
                android:id="@+id/etUserName" 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#00000000"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/normal_black"
                android:inputType="text"/>
        </LinearLayout>
        
        <View android:background="#ffc7c7c7" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_height="40.0dp"
            android:layout_width="fill_parent"
            android:gravity="center_vertical">
            <TextView 
                android:textSize="@dimen/normal_text_size"
                android:layout_width="100.0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:paddingLeft="8.0dp"
                android:text="@string/pwd"/>
            <EditText
                android:id="@+id/etPwd" 
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#00000000"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/normal_black"
                android:inputType="textPassword"/>
        </LinearLayout>       
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin" 
        android:layout_width="120.0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_yellow_login"
        android:text="@string/login"/>
</LinearLayout>
